# SoundEffects

./: .gitignore  CMakeLists.txt  README.md  mod.json  xmake.lua
libs/cocos-headers/: xmake.lua
libs/cocos-headers/cocos2dx/platform/win32/: CCStdC.h
libs/cocos-headers/cocos2dx/platform/winrt/: CCStdC.h
libs/gd.h/: xmake.lua
libs/mat-dash/: LICENSE  README.md  xmake.lua
libs/mat-dash/include/: matdash.hpp
libs/mat-dash/include/matdash/: boilerplate.hpp  cocos.hpp  console.hpp  minhook.hpp
libs/mat-dash/include/matdash/detail/: gen.hpp  gen.py  impl.hpp
src/: main.cpp  utils.cpp  utils.h
